--- a/FieldTheBern/Views/Base.lproj/Main.storyboard
+++ b/FieldTheBern/Views/Base.lproj/Main.storyboard
@@ -1093,7 +1093,7 @@
                                             <rect key="frame" x="70.5" y="39.5" width="469.5" height="13"/>
                                         </variation>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NEAREST ADDRESS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Gc-vgt">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NEAREST TURF" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Gc-vgt">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <fontDescription key="fontDescription" name="Lato-Heavy" family="Lato" pointSize="10"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -9087,8 +9087,8 @@ useful talking points.</string>
         <segue reference="lEs-Nz-HBL"/>
         <segue reference="ngV-wa-HIN"/>
         <segue reference="ovj-FK-nQJ"/>
-        <segue reference="xzx-VP-2uM"/>
         <segue reference="b8p-Sn-bbk"/>
         <segue reference="Rbd-US-3DY"/>
+        <segue reference="ZW2-2f-6Nd"/>
     </inferredMetricsTieBreakers>
 </document>
