Added campaign position support

--- a/FieldTheBern/Views/Base.lproj/Main.storyboard
+++ b/FieldTheBern/Views/Base.lproj/Main.storyboard
@@ -8789,8 +8789,8 @@ useful talking points.</string>
     <inferredMetricsTieBreakers>
         <segue reference="ngV-wa-HIN"/>
         <segue reference="ovj-FK-nQJ"/>
+        <segue reference="xzx-VP-2uM"/>
         <segue reference="b8p-Sn-bbk"/>
-        <segue reference="ZW2-2f-6Nd"/>
         <segue reference="lEs-Nz-HBL"/>
         <segue reference="3nY-LF-DGD"/>
         <segue reference="Y1h-lb-cnM"/>
