Pesky alignment fix.

--- a/FieldTheBern/Views/Base.lproj/Main.storyboard
+++ b/FieldTheBern/Views/Base.lproj/Main.storyboard
@@ -8795,11 +8795,11 @@ useful talking points.</string>
         <image name="us-map" width="150" height="150"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ngV-wa-HIN"/>
-        <segue reference="ovj-FK-nQJ"/>
-        <segue reference="b8p-Sn-bbk"/>
+        <segue reference="sWn-JC-xS9"/>
+        <segue reference="VUw-pL-0Be"/>
+        <segue reference="0Br-U7-a8J"/>
         <segue reference="ZW2-2f-6Nd"/>
-        <segue reference="crP-rK-PNh"/>
+        <segue reference="lEs-Nz-HBL"/>
         <segue reference="3nY-LF-DGD"/>
         <segue reference="Y1h-lb-cnM"/>
     </inferredMetricsTieBreakers>
