Removed DS_Store and some auto changes
Removed DS_Store and some auto changes

--- a/FieldTheBern/Views/Base.lproj/Main.storyboard
+++ b/FieldTheBern/Views/Base.lproj/Main.storyboard
@@ -8799,9 +8799,9 @@ useful talking points.</string>
     <inferredMetricsTieBreakers>
         <segue reference="ngV-wa-HIN"/>
         <segue reference="ovj-FK-nQJ"/>
-        <segue reference="xzx-VP-2uM"/>
         <segue reference="b8p-Sn-bbk"/>
-        <segue reference="lEs-Nz-HBL"/>
+        <segue reference="ZW2-2f-6Nd"/>
+        <segue reference="crP-rK-PNh"/>
         <segue reference="3nY-LF-DGD"/>
         <segue reference="Y1h-lb-cnM"/>
     </inferredMetricsTieBreakers>
